# TradingAgents

./: .gitignore  CLAUDE.md  autoAgent.sh  load_env.sh  main.py  pyproject.toml  requirements.txt  test_ollama.py
cli/: main.py  utils.py
results/GOOGL/2025-07-06/google/reports/: market_report.md
results/GOOGL/2025-07-06/openai/reports/: fundamentals_report.md  investment_plan.md  market_report.md  news_report.md  sentiment_report.md
results/SPY/2025-07-05/openai/reports/: final_trade_decision.md  fundamentals_report.md  investment_plan.md  market_report.md  news_report.md  sentiment_report.md  trader_investment_plan.md
results/SPY/2025-07-05/reports/: final_trade_decision.md  fundamentals_report.md  investment_plan.md  market_report.md  news_report.md  sentiment_report.md  trader_investment_plan.md
results/iau/2025-07-05/reports/: fundamentals_report.md  market_report.md  news_report.md  sentiment_report.md
results/nvda/2025-07-05/deepseek/reports/: final_trade_decision.md  fundamentals_report.md  investment_plan.md  market_report.md  news_report.md  sentiment_report.md  trader_investment_plan.md
results/nvda/2025-07-05/reports/: final_trade_decision.md  fundamentals_report.md  investment_plan.md  market_report.md  news_report.md  sentiment_report.md  trader_investment_plan.md
tests/: __init__.py  test_env_loading.py  test_gemini_integration.py  test_graph_progress.py  test_memory.py  test_memory_log.py  test_openai_integration.py  test_progress_logging.py  test_research_cache.py
tradingagents/: default_config.py  progress.py
tradingagents/agents/: schemas.py
tradingagents/agents/analysts/: fundamentals_analyst.py  market_analyst.py  news_analyst.py  social_media_analyst.py
tradingagents/agents/managers/: portfolio_manager.py  research_manager.py  risk_manager.py
tradingagents/agents/researchers/: bear_researcher.py  bull_researcher.py
tradingagents/agents/trader/: trader.py
tradingagents/agents/utils/: memory.py
tradingagents/dataflows/: alpha_vantage_common.py  alpha_vantage_fundamentals.py  config.py  interface.py  reddit_utils.py  research_cache.py  y_finance.py
tradingagents/graph/: setup.py  trading_graph.py
